# x64dbg_mcp

./: .gitattributes  .gitignore  README.md  THIRD_PARTY.md  build.ps1
mcp/: Program.cs  X64DbgClient.cs  X64DbgTools.cs  x64dbgmcp.csproj
plugin/: CMakeLists.txt
plugin/src/: http_server.cpp  http_server.h  plugin.cpp  pluginmain.h  rpc.cpp  rpc.h
